--- a/Snap/Base.lproj/Main.storyboard
+++ b/Snap/Base.lproj/Main.storyboard
@@ -20,8 +20,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Kt-vJ-JSY">
-                                <rect key="frame" x="311" y="766" width="83" height="55"/>
+                                <rect key="frame" x="311" y="782" width="83" height="39"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="f7D-FK-3NE"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="30"/>
                                 <state key="normal" title="SNAP!">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -37,9 +40,18 @@
                                     <constraint firstAttribute="height" constant="205" id="uI8-3T-zbO"/>
                                 </constraints>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gvt-mM-RMQ">
+                                <rect key="frame" x="140" y="326" width="134" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="134" id="h8X-mO-5IN"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a7x-ku-7RB">
                                 <rect key="frame" x="51" y="782" width="94" height="39"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="UAs-Pu-YuB"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="30"/>
                                 <state key="normal" title="DRAW!">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -48,27 +60,37 @@
                                     <action selector="drawButtonPressed" destination="BYZ-38-t0r" eventType="touchDown" id="d13-Ud-MBE"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gvt-mM-RMQ">
-                                <rect key="frame" x="140" y="326" width="134" height="205"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="score" translatesAutoresizingMaskIntoConstraints="NO" id="4oR-qJ-lwG">
+                                <rect key="frame" x="20" y="44" width="92" height="51"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="371" id="Gcc-wL-CFr"/>
-                                    <constraint firstAttribute="width" constant="134" id="h8X-mO-5IN"/>
+                                    <constraint firstAttribute="width" constant="92" id="LAv-fC-ZHc"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhi-u7-7bq">
+                                <rect key="frame" x="60" y="54.5" width="12" height="30"/>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="0Kt-vJ-JSY" firstAttribute="leading" secondItem="a7x-ku-7RB" secondAttribute="trailing" constant="166" id="2Jo-Bp-vER"/>
                             <constraint firstItem="Gvt-mM-RMQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="140" id="5Kq-hs-hLp"/>
                             <constraint firstItem="4ZN-y8-LJf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="43" id="63S-vv-3O0"/>
+                            <constraint firstItem="Jhi-u7-7bq" firstAttribute="centerX" secondItem="4oR-qJ-lwG" secondAttribute="centerX" id="8GT-9J-FoP"/>
+                            <constraint firstItem="Jhi-u7-7bq" firstAttribute="centerY" secondItem="4oR-qJ-lwG" secondAttribute="centerY" id="9JP-jL-DZb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0Kt-vJ-JSY" secondAttribute="bottom" constant="41" id="Aye-EU-0Fp"/>
                             <constraint firstItem="4ZN-y8-LJf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="EuX-Y5-o3V"/>
+                            <constraint firstItem="4oR-qJ-lwG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="KfH-ks-ajm"/>
                             <constraint firstItem="a7x-ku-7RB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="MXQ-Dr-zus"/>
-                            <constraint firstItem="a7x-ku-7RB" firstAttribute="top" secondItem="Gvt-mM-RMQ" secondAttribute="bottom" constant="85" id="QXT-tz-5kA"/>
+                            <constraint firstItem="a7x-ku-7RB" firstAttribute="top" secondItem="Gvt-mM-RMQ" secondAttribute="bottom" constant="251" id="QXT-tz-5kA"/>
                             <constraint firstItem="JdC-DP-5Uj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d2a-NG-sBE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a7x-ku-7RB" secondAttribute="bottom" constant="41" id="dnr-1W-f9B"/>
                             <constraint firstItem="JdC-DP-5Uj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="f2d-pR-1Gm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4ZN-y8-LJf" secondAttribute="trailing" constant="130" id="lZW-Nv-Yli"/>
+                            <constraint firstItem="4oR-qJ-lwG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qfa-fd-l4P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0Kt-vJ-JSY" secondAttribute="trailing" constant="20" id="uyJ-V8-6QY"/>
                             <constraint firstItem="JdC-DP-5Uj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="x9k-d6-Odt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gvt-mM-RMQ" secondAttribute="trailing" constant="140" id="zIg-Py-HcQ"/>
@@ -78,6 +100,7 @@
                     </view>
                     <connections>
                         <outlet property="cardImage" destination="Gvt-mM-RMQ" id="QRT-Kt-dac"/>
+                        <outlet property="scoreLabel" destination="Jhi-u7-7bq" id="lvp-Ra-IfF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -88,6 +111,7 @@
     <resources>
         <image name="background" width="375" height="667"/>
         <image name="red_back" width="691" height="1056"/>
+        <image name="score" width="119" height="51"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
