--- a/Snap/Base.lproj/Main.storyboard
+++ b/Snap/Base.lproj/Main.storyboard
@@ -19,6 +19,13 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="JdC-DP-5Uj">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F7E-sl-Ss9">
+                                <rect key="frame" x="233" y="449" width="144" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="E5a-9B-23A"/>
+                                    <constraint firstAttribute="width" constant="144" id="rqg-q2-M1Q"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Kt-vJ-JSY">
                                 <rect key="frame" x="311" y="782" width="83" height="39"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -34,16 +41,10 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red_back" translatesAutoresizingMaskIntoConstraints="NO" id="4ZN-y8-LJf">
-                                <rect key="frame" x="130" y="87" width="154" height="205"/>
+                                <rect key="frame" x="51" y="183" width="144" height="205"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="154" id="mBf-aK-7Gi"/>
+                                    <constraint firstAttribute="width" constant="144" id="mBf-aK-7Gi"/>
                                     <constraint firstAttribute="height" constant="205" id="uI8-3T-zbO"/>
-                                </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gvt-mM-RMQ">
-                                <rect key="frame" x="140" y="326" width="134" height="205"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="134" id="h8X-mO-5IN"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a7x-ku-7RB">
@@ -72,34 +73,54 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WO7-pn-F9y">
+                                <rect key="frame" x="233" y="183" width="144" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="205" id="5Cz-gf-UGL"/>
+                                    <constraint firstAttribute="width" constant="144" id="u4D-rw-FJC"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellow_back" translatesAutoresizingMaskIntoConstraints="NO" id="Gvt-mM-RMQ">
+                                <rect key="frame" x="51" y="449" width="144" height="205"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="144" id="h8X-mO-5IN"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="0Kt-vJ-JSY" firstAttribute="leading" secondItem="a7x-ku-7RB" secondAttribute="trailing" constant="166" id="2Jo-Bp-vER"/>
-                            <constraint firstItem="Gvt-mM-RMQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="140" id="5Kq-hs-hLp"/>
-                            <constraint firstItem="4ZN-y8-LJf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="43" id="63S-vv-3O0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WO7-pn-F9y" secondAttribute="trailing" constant="37" id="4DY-Rv-pft"/>
+                            <constraint firstItem="Gvt-mM-RMQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="5Kq-hs-hLp"/>
+                            <constraint firstItem="4ZN-y8-LJf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="139" id="63S-vv-3O0"/>
                             <constraint firstItem="Jhi-u7-7bq" firstAttribute="centerX" secondItem="4oR-qJ-lwG" secondAttribute="centerX" id="8GT-9J-FoP"/>
                             <constraint firstItem="Jhi-u7-7bq" firstAttribute="centerY" secondItem="4oR-qJ-lwG" secondAttribute="centerY" id="9JP-jL-DZb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0Kt-vJ-JSY" secondAttribute="bottom" constant="41" id="Aye-EU-0Fp"/>
-                            <constraint firstItem="4ZN-y8-LJf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="EuX-Y5-o3V"/>
+                            <constraint firstItem="4ZN-y8-LJf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="EuX-Y5-o3V"/>
+                            <constraint firstItem="F7E-sl-Ss9" firstAttribute="top" secondItem="WO7-pn-F9y" secondAttribute="bottom" constant="61" id="GLA-rw-OLd"/>
+                            <constraint firstItem="WO7-pn-F9y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="139" id="KAX-3g-V6n"/>
                             <constraint firstItem="4oR-qJ-lwG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="KfH-ks-ajm"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="F7E-sl-Ss9" secondAttribute="trailing" constant="37" id="LVW-no-esC"/>
                             <constraint firstItem="a7x-ku-7RB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="MXQ-Dr-zus"/>
-                            <constraint firstItem="a7x-ku-7RB" firstAttribute="top" secondItem="Gvt-mM-RMQ" secondAttribute="bottom" constant="251" id="QXT-tz-5kA"/>
+                            <constraint firstItem="a7x-ku-7RB" firstAttribute="top" secondItem="Gvt-mM-RMQ" secondAttribute="bottom" constant="128" id="QXT-tz-5kA"/>
                             <constraint firstItem="JdC-DP-5Uj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d2a-NG-sBE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a7x-ku-7RB" secondAttribute="bottom" constant="41" id="dnr-1W-f9B"/>
+                            <constraint firstItem="WO7-pn-F9y" firstAttribute="leading" secondItem="4ZN-y8-LJf" secondAttribute="trailing" constant="38" id="edh-Dx-sxW"/>
                             <constraint firstItem="JdC-DP-5Uj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="f2d-pR-1Gm"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4ZN-y8-LJf" secondAttribute="trailing" constant="130" id="lZW-Nv-Yli"/>
+                            <constraint firstItem="F7E-sl-Ss9" firstAttribute="leading" secondItem="Gvt-mM-RMQ" secondAttribute="trailing" constant="38" id="iKo-wj-DQY"/>
+                            <constraint firstItem="F7E-sl-Ss9" firstAttribute="top" secondItem="WO7-pn-F9y" secondAttribute="bottom" constant="61" id="oYB-0A-4Gr"/>
                             <constraint firstItem="4oR-qJ-lwG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qfa-fd-l4P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0Kt-vJ-JSY" secondAttribute="trailing" constant="20" id="uyJ-V8-6QY"/>
                             <constraint firstItem="JdC-DP-5Uj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="x9k-d6-Odt"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gvt-mM-RMQ" secondAttribute="trailing" constant="140" id="zIg-Py-HcQ"/>
-                            <constraint firstItem="Gvt-mM-RMQ" firstAttribute="top" secondItem="4ZN-y8-LJf" secondAttribute="bottom" constant="34" id="zNy-r5-naR"/>
+                            <constraint firstItem="0Kt-vJ-JSY" firstAttribute="top" secondItem="F7E-sl-Ss9" secondAttribute="bottom" constant="128" id="xFx-TW-1rw"/>
+                            <constraint firstItem="Gvt-mM-RMQ" firstAttribute="top" secondItem="4ZN-y8-LJf" secondAttribute="bottom" constant="61" id="zNy-r5-naR"/>
                             <constraint firstAttribute="bottom" secondItem="JdC-DP-5Uj" secondAttribute="bottom" id="zmY-kt-LA4"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="cardImage" destination="Gvt-mM-RMQ" id="QRT-Kt-dac"/>
+                        <outlet property="computerCardImage" destination="WO7-pn-F9y" id="Yav-rH-cJf"/>
+                        <outlet property="playerCardImage" destination="F7E-sl-Ss9" id="cRB-gy-dSx"/>
                         <outlet property="scoreLabel" destination="Jhi-u7-7bq" id="lvp-Ra-IfF"/>
                     </connections>
                 </viewController>
@@ -112,6 +133,7 @@
         <image name="background" width="375" height="667"/>
         <image name="red_back" width="691" height="1056"/>
         <image name="score" width="119" height="51"/>
+        <image name="yellow_back" width="691" height="1056"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
